<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_gank_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/android"
            style="@style/TitleStyle"
            android:text="@string/android"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/android_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />


        <TextView
            android:id="@+id/ios"
            style="@style/TitleStyle"
            android:text="@string/ios"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ios_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/web"
            style="@style/TitleStyle"
            android:text="@string/web"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/web_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />


        <TextView
            android:id="@+id/expand_resource"
            style="@style/TitleStyle"
            android:text="@string/expand_resource"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/expand_resource_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/recommend"
            style="@style/TitleStyle"
            android:text="@string/recommend"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recommend_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/app"
            style="@style/TitleStyle"
            android:text="@string/app"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/app_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/video"
            style="@style/TitleStyle"
            android:text="@string/video"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/video_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>